@@ -1,3 +1,8 @@
+TAG: uniprotload-6-0-11-2
+DATE: 11/01/2017
+STAFF: sc
+CHANGES: TR12627 - add processing of ldb column in input file
+
 TAG: uniprotload-6-0-11-1
 DATE: 10/11/2017
 STAFF: sc
